stage0/tests/compile_fail/enums/nonexhaustive.dg
type Color = Red | Green | Blue
func main() -> i32 {
    match Color.Red {
        Color.Red => 1,
        Color.Green => 2,
    }
}
